--- a/landpage-fmp/src/App.css
+++ b/landpage-fmp/src/App.css
@@ -3,13 +3,12 @@
 }
 
 header {
-  background-image: url('https://via.placeholder.com/1920x600');
   background-size: cover;
   background-position: center;
 }
 
 section {
-  padding: 50px 0;
+  padding: 35px 0;
 }
 
 h2 {
@@ -20,4 +19,7 @@ footer {
   background-color: #343a40;
   color: white;
   padding: 10px 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
