--- a/landpage-fmp/src/App.css
+++ b/landpage-fmp/src/App.css
@@ -2,16 +2,31 @@
   text-align: center;
 }
 
-header {
+body {
+  background-image: url('../public/logo.jpg');
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: relative;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: -1;
 }
 
 section {
   padding: 35px 0;
 }
 
-h2 {
+h2,h3,h5 {
   font-weight: bold;
 }
 
